# log-analyzer

./: .dir-locals.el  Cargo.toml  DEV.org  README.org
scripts/: build.sh  chm-file-filter.txt  chm-start.sh  chm-sync.sh  chm-tail-log.sh  install-lively-server-systemd.sh  run.sh  start-on-lively-server.sh  sync.sh
src/: error.rs  main.rs  options.rs  parser.rs  stats.rs  test_data.rs  viz.rs
systemd/: lively-log-parser.service
