[package]
name = "chm-logs"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
access_log_parser = "0.5"
chrono = "0.4.19"
itertools = "0.9.0"
charts = "0.3.0"
lazy_static = "1.4.0"
getopts = "0.2.21"
